--- a/lighthouse-core/lib/i18n/locales/en-XL.json
+++ b/lighthouse-core/lib/i18n/locales/en-XL.json
@@ -1022,6 +1022,12 @@
   "lighthouse-core/audits/layout-shift-elements.js | title": {
     "message": "Âv́ôíd̂ ĺâŕĝé l̂áŷóût́ ŝh́îf́t̂ś"
   },
+  "lighthouse-core/audits/lcp-lazy-loaded.js | description": {
+    "message": "Ĉón̂śîd́êŕ t̂ó r̂ém̂óv̂é l̂áẑý l̂óâd́îńĝ f́ôŕ l̂ár̂ǵêśt̂ ćôńt̂én̂t́f̂úl̂ ṕâín̂t́ êĺêḿêńt̂."
+  },
+  "lighthouse-core/audits/lcp-lazy-loaded.js | title": {
+    "message": "L̂ĆP̂ él̂ém̂én̂t́ ŵáŝ ĺâźŷ-ĺôád̂éd̂"
+  },
   "lighthouse-core/audits/long-tasks.js | description": {
     "message": "L̂íŝt́ŝ t́ĥé l̂ón̂ǵêśt̂ t́âśk̂ś ôń t̂h́ê ḿâín̂ t́ĥŕêád̂, úŝéf̂úl̂ f́ôŕ îd́êńt̂íf̂ýîńĝ ẃôŕŝt́ ĉón̂t́r̂íb̂út̂ór̂ś t̂ó îńp̂út̂ d́êĺâý. [L̂éâŕn̂ ḿôŕê](https://web.dev/long-tasks-devtools/)"
   },
