--- a/lighthouse-core/lib/i18n/locales/en-XL.json
+++ b/lighthouse-core/lib/i18n/locales/en-XL.json
@@ -1736,6 +1736,9 @@
   "lighthouse-core/lib/csp-evaluator.js | nonceLength": {
     "message": "N̂ón̂ćêś ŝh́ôúl̂d́ b̂é ât́ l̂éâśt̂ 8 ćĥár̂áĉt́êŕŝ ĺôńĝ."
   },
+  "lighthouse-core/lib/csp-evaluator.js | plainUrlScheme": {
+    "message": "Âv́ôíd̂ úŝín̂ǵ p̂ĺâín̂ ÚR̂Ĺ ŝćĥém̂éŝ ({keyword}) ín̂ t́ĥíŝ d́îŕêćt̂ív̂é. Ît́ ĉán̂ ál̂ĺôẃ ŝćr̂íp̂t́ŝ t́ô b́ê śôúr̂ćêd́ f̂ŕôḿ âń ûńŝáf̂é d̂óm̂áîń."
+  },
   "lighthouse-core/lib/csp-evaluator.js | reportingDestinationMissing": {
     "message": "N̂ó ĈŚP̂ ćôńf̂íĝúr̂éŝ á r̂ép̂ór̂t́îńĝ d́êśt̂ín̂át̂íôń. T̂h́îś m̂ák̂éŝ ít̂ d́îf́f̂íĉúl̂t́ t̂ó m̂áîńt̂áîń t̂h́ê ĆŜṔ ôv́êŕ t̂ím̂é âńd̂ ḿôńît́ôŕ f̂ór̂ án̂ý b̂ŕêák̂áĝéŝ."
   },
@@ -1757,8 +1760,8 @@
   "lighthouse-core/lib/csp-evaluator.js | unsafeInlineFallback": {
     "message": "Ĉón̂śîd́êŕ âd́d̂ín̂ǵ 'ûńŝáf̂é-îńl̂ín̂é' (îǵn̂ór̂éd̂ b́ŷ b́r̂óŵśêŕŝ śûṕp̂ór̂t́îńĝ ńôńĉéŝ/h́âśĥéŝ) t́ô b́ê b́âćk̂ẃâŕd̂ ćôḿp̂át̂íb̂ĺê ẃît́ĥ ól̂d́êŕ b̂ŕôẃŝér̂ś."
   },
-  "lighthouse-core/lib/csp-evaluator.js | unsafeKeyword": {
-    "message": "Âv́ôíd̂ úŝín̂ǵ {keyword} îń t̂h́îś d̂ír̂éĉt́îv́ê íf̂ ít̂ íŝ ńôt́ â f́âĺl̂b́âćk̂ f́ôŕ 'ŝt́r̂íĉt́-d̂ýn̂ám̂íĉ'."
+  "lighthouse-core/lib/csp-evaluator.js | wildcard": {
+    "message": "Âv́ôíd̂ úŝín̂ǵ ŵíl̂d́ĉár̂d́ŝ ({keyword}) ín̂ t́ĥíŝ d́îŕêćt̂ív̂é. Ît́ ĉán̂ ál̂ĺôẃ ŝćr̂íp̂t́ŝ t́ô b́ê śôúr̂ćêd́ f̂ŕôḿ âń ûńŝáf̂é d̂óm̂áîń."
   },
   "lighthouse-core/lib/i18n/i18n.js | columnBlockingTime": {
     "message": "M̂áîń-T̂h́r̂éâd́ B̂ĺôćk̂ín̂ǵ T̂ím̂é"
