--- a/lighthouse-core/lib/i18n/locales/en-XL.json
+++ b/lighthouse-core/lib/i18n/locales/en-XL.json
@@ -1,4 +1,13 @@
 {
+  "flow-report/src/i18n/ui-strings.js | navigationDescription": {
+    "message": "P̂áĝé l̂óâd́"
+  },
+  "flow-report/src/i18n/ui-strings.js | snapshotDescription": {
+    "message": "Ĉáp̂t́ûŕêd́ ŝt́ât́ê óf̂ ṕâǵê"
+  },
+  "flow-report/src/i18n/ui-strings.js | timespanDescription": {
+    "message": "Ûśêŕ îńt̂ér̂áĉt́îón̂ś"
+  },
   "lighthouse-core/audits/accessibility/accesskeys.js | description": {
     "message": "Âćĉéŝś k̂éŷś l̂ét̂ úŝér̂ś q̂úîćk̂ĺŷ f́ôćûś â ṕâŕt̂ óf̂ t́ĥé p̂áĝé. F̂ór̂ ṕr̂óp̂ér̂ ńâv́îǵât́îón̂, éâćĥ áĉćêśŝ ḱêý m̂úŝt́ b̂é ûńîq́ûé. [L̂éâŕn̂ ḿôŕê](https://web.dev/accesskeys/)."
   },
