--- a/lighthouse-core/lib/i18n/locales/en-US.json
+++ b/lighthouse-core/lib/i18n/locales/en-US.json
@@ -1,12 +1,27 @@
 {
+  "flow-report/src/i18n/ui-strings.js | allReports": {
+    "message": "ALL REPORTS"
+  },
+  "flow-report/src/i18n/ui-strings.js | desktop": {
+    "message": "Desktop"
+  },
+  "flow-report/src/i18n/ui-strings.js | mobile": {
+    "message": "Mobile"
+  },
   "flow-report/src/i18n/ui-strings.js | navigationDescription": {
     "message": "Page load"
   },
   "flow-report/src/i18n/ui-strings.js | snapshotDescription": {
     "message": "Captured state of page"
   },
+  "flow-report/src/i18n/ui-strings.js | summary": {
+    "message": "Summary"
+  },
   "flow-report/src/i18n/ui-strings.js | timespanDescription": {
     "message": "User interactions"
+  },
+  "flow-report/src/i18n/ui-strings.js | title": {
+    "message": "Lighthouse User Flow Report"
   },
   "lighthouse-core/audits/accessibility/accesskeys.js | description": {
     "message": "Access keys let users quickly focus a part of the page. For proper navigation, each access key must be unique. [Learn more](https://web.dev/accesskeys/)."
