--- a/lighthouse-core/lib/i18n/locales/en-US.json
+++ b/lighthouse-core/lib/i18n/locales/en-US.json
@@ -1,6 +1,6 @@
 {
   "flow-report/src/i18n/ui-strings.js | allReports": {
-    "message": "ALL REPORTS"
+    "message": "All Reports"
   },
   "flow-report/src/i18n/ui-strings.js | desktop": {
     "message": "Desktop"
