--- a/lighthouse-core/lib/i18n/locales/en-XL.json
+++ b/lighthouse-core/lib/i18n/locales/en-XL.json
@@ -1,6 +1,6 @@
 {
   "flow-report/src/i18n/ui-strings.js | allReports": {
-    "message": "ÂĹL̂ ŔÊṔÔŔT̂Ś"
+    "message": "Âĺl̂ Ŕêṕôŕt̂ś"
   },
   "flow-report/src/i18n/ui-strings.js | desktop": {
     "message": "D̂éŝḱt̂óp̂"
