--- a/shared/localization/locales/en-XL.json
+++ b/shared/localization/locales/en-XL.json
@@ -2447,6 +2447,9 @@
   "report/renderer/util.js | passedAuditsGroupTitle": {
     "message": "P̂áŝśêd́ âúd̂ít̂ś"
   },
+  "report/renderer/util.js | runtimeAnalysisWindow": {
+    "message": "Îńît́îál̂ ṕâǵê ĺôád̂"
+  },
   "report/renderer/util.js | runtimeDesktopEmulation": {
     "message": "Êḿûĺât́êd́ D̂éŝḱt̂óp̂"
   },
@@ -2475,7 +2478,7 @@
     "message": "Ŝín̂ǵl̂é p̂áĝé l̂óâd́"
   },
   "report/renderer/util.js | runtimeSingleLoadTooltip": {
-    "message": "T̂h́îś d̂át̂á r̂ép̂ŕêśêńt̂ś â śîńĝĺê ṕâǵê ĺôád̂. F́îél̂d́ d̂át̂á ôf́t̂én̂ śûḿm̂ár̂íẑéŝ ḿâńŷ śêśŝíôńŝ."
+    "message": "T̂h́îś d̂át̂á îś t̂ák̂én̂ f́r̂óm̂ á ŝín̂ǵl̂é p̂áĝé l̂óâd́, âś ôṕp̂óŝéd̂ t́ô f́îél̂d́ d̂át̂á ŝúm̂ḿâŕîźîńĝ ḿâńŷ śêśŝíôńŝ."
   },
   "report/renderer/util.js | runtimeUnknown": {
     "message": "Ûńk̂ńôẃn̂"
