report(flow): category tooltip highest impact

--- a/shared/localization/locales/en-US.json
+++ b/shared/localization/locales/en-US.json
@@ -59,6 +59,9 @@
   "flow-report/src/i18n/ui-strings.js | helpUseCaseTimespan2": {
     "message": "Discover performance opportunities to improve the experience for long-lived pages and single-page applications."
   },
+  "flow-report/src/i18n/ui-strings.js | highestImpact": {
+    "message": "Highest impact"
+  },
   "flow-report/src/i18n/ui-strings.js | informativeAuditCount": {
     "message": "{numInformative, plural,\n    =1 {{numInformative} informative audit}\n    other {{numInformative} informative audits}\n  }"
   },
