restore the 'Device' string

--- a/shared/localization/locales/ar-XB.json
+++ b/shared/localization/locales/ar-XB.json
@@ -2447,6 +2447,9 @@
   "report/renderer/util.js | runtimeSettingsCPUThrottling": {
     "message": "‏‮CPU‬‏ ‏‮throttling‬‏"
   },
+  "report/renderer/util.js | runtimeSettingsDevice": {
+    "message": "‏‮Device‬‏"
+  },
   "report/renderer/util.js | runtimeSettingsNetworkThrottling": {
     "message": "‏‮Network‬‏ ‏‮throttling‬‏"
   },
