--- a/shared/localization/locales/ar.json
+++ b/shared/localization/locales/ar.json
@@ -2447,6 +2447,9 @@
   "report/renderer/util.js | runtimeSettingsCPUThrottling": {
     "message": "تقييد وحدة المعالجة المركزية (CPU)"
   },
+  "report/renderer/util.js | runtimeSettingsDevice": {
+    "message": "جهاز"
+  },
   "report/renderer/util.js | runtimeSettingsNetworkThrottling": {
     "message": "ضبط الحد الأقصى المسموح لعرض نطاق الشبكة"
   },
