--- a/shared/localization/locales/da.json
+++ b/shared/localization/locales/da.json
@@ -2447,6 +2447,9 @@
   "report/renderer/util.js | runtimeSettingsCPUThrottling": {
     "message": "CPU-begrænsning"
   },
+  "report/renderer/util.js | runtimeSettingsDevice": {
+    "message": "Enhed"
+  },
   "report/renderer/util.js | runtimeSettingsNetworkThrottling": {
     "message": "Netværksbegrænsning"
   },
