--- a/shared/localization/locales/de.json
+++ b/shared/localization/locales/de.json
@@ -2447,6 +2447,9 @@
   "report/renderer/util.js | runtimeSettingsCPUThrottling": {
     "message": "CPU-Drosselung"
   },
+  "report/renderer/util.js | runtimeSettingsDevice": {
+    "message": "Gerät"
+  },
   "report/renderer/util.js | runtimeSettingsNetworkThrottling": {
     "message": "Netzwerkdrosselung"
   },
