--- a/shared/localization/locales/en-US.json
+++ b/shared/localization/locales/en-US.json
@@ -2468,6 +2468,9 @@
   "report/renderer/util.js | runtimeSettingsCPUThrottling": {
     "message": "CPU throttling"
   },
+  "report/renderer/util.js | runtimeSettingsDevice": {
+    "message": "Device"
+  },
   "report/renderer/util.js | runtimeSettingsNetworkThrottling": {
     "message": "Network throttling"
   },
