--- a/shared/localization/locales/hu.json
+++ b/shared/localization/locales/hu.json
@@ -2447,6 +2447,9 @@
   "report/renderer/util.js | runtimeSettingsCPUThrottling": {
     "message": "CPU-korlátozás"
   },
+  "report/renderer/util.js | runtimeSettingsDevice": {
+    "message": "Eszköz"
+  },
   "report/renderer/util.js | runtimeSettingsNetworkThrottling": {
     "message": "Hálózatkorlátozás"
   },
