--- a/shared/localization/locales/lv.json
+++ b/shared/localization/locales/lv.json
@@ -2447,6 +2447,9 @@
   "report/renderer/util.js | runtimeSettingsCPUThrottling": {
     "message": "Centrālā procesora ierobežošana"
   },
+  "report/renderer/util.js | runtimeSettingsDevice": {
+    "message": "Ierīce"
+  },
   "report/renderer/util.js | runtimeSettingsNetworkThrottling": {
     "message": "Tīkla ierobežošana"
   },
