--- a/shared/localization/locales/nl.json
+++ b/shared/localization/locales/nl.json
@@ -2447,6 +2447,9 @@
   "report/renderer/util.js | runtimeSettingsCPUThrottling": {
     "message": "CPU-throttling"
   },
+  "report/renderer/util.js | runtimeSettingsDevice": {
+    "message": "Apparaat"
+  },
   "report/renderer/util.js | runtimeSettingsNetworkThrottling": {
     "message": "Netwerkbeperking"
   },
