--- a/shared/localization/locales/pl.json
+++ b/shared/localization/locales/pl.json
@@ -2447,6 +2447,9 @@
   "report/renderer/util.js | runtimeSettingsCPUThrottling": {
     "message": "Ograniczanie wykorzystania procesora"
   },
+  "report/renderer/util.js | runtimeSettingsDevice": {
+    "message": "Urządzenie"
+  },
   "report/renderer/util.js | runtimeSettingsNetworkThrottling": {
     "message": "Ograniczanie wykorzystania sieci"
   },
