--- a/shared/localization/locales/ro.json
+++ b/shared/localization/locales/ro.json
@@ -2447,6 +2447,9 @@
   "report/renderer/util.js | runtimeSettingsCPUThrottling": {
     "message": "Limitarea CPU"
   },
+  "report/renderer/util.js | runtimeSettingsDevice": {
+    "message": "Dispozitiv"
+  },
   "report/renderer/util.js | runtimeSettingsNetworkThrottling": {
     "message": "Limitarea rețelei"
   },
