--- a/shared/localization/locales/sl.json
+++ b/shared/localization/locales/sl.json
@@ -2447,6 +2447,9 @@
   "report/renderer/util.js | runtimeSettingsCPUThrottling": {
     "message": "Zaviranje CPE-ja"
   },
+  "report/renderer/util.js | runtimeSettingsDevice": {
+    "message": "Naprava"
+  },
   "report/renderer/util.js | runtimeSettingsNetworkThrottling": {
     "message": "Omejevanje omrežja"
   },
