--- a/shared/localization/locales/sr.json
+++ b/shared/localization/locales/sr.json
@@ -2447,6 +2447,9 @@
   "report/renderer/util.js | runtimeSettingsCPUThrottling": {
     "message": "Ограничавање процесора"
   },
+  "report/renderer/util.js | runtimeSettingsDevice": {
+    "message": "Уређај"
+  },
   "report/renderer/util.js | runtimeSettingsNetworkThrottling": {
     "message": "Ограничавање мреже"
   },
