--- a/shared/localization/locales/sv.json
+++ b/shared/localization/locales/sv.json
@@ -2447,6 +2447,9 @@
   "report/renderer/util.js | runtimeSettingsCPUThrottling": {
     "message": "CPU-begränsning"
   },
+  "report/renderer/util.js | runtimeSettingsDevice": {
+    "message": "Enhet"
+  },
   "report/renderer/util.js | runtimeSettingsNetworkThrottling": {
     "message": "Nätverksbegränsning"
   },
