--- a/shared/localization/locales/th.json
+++ b/shared/localization/locales/th.json
@@ -2447,6 +2447,9 @@
   "report/renderer/util.js | runtimeSettingsCPUThrottling": {
     "message": "การควบคุม CPU"
   },
+  "report/renderer/util.js | runtimeSettingsDevice": {
+    "message": "อุปกรณ์"
+  },
   "report/renderer/util.js | runtimeSettingsNetworkThrottling": {
     "message": "การควบคุมเครือข่าย"
   },
